Call attributes on model in template

--- a/frontend/app/templates/projects/show.hbs
+++ b/frontend/app/templates/projects/show.hbs
@@ -1,5 +1,5 @@
-<h3>{{name}}</h3>
+<h3>{{model.name}}</h3>
 
 <div id="description">
-  Description: {{description}}
+  Description: {{model.description}}
 </div>
